# django-qserializer

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-publish.yml
django_qserializer/: __init__.py  serialization.py
django_qserializer/tests/: test_prepare_queryset.py  test_serializer.py
django_qserializer/tests/testapp/: apps.py  models.py  settings.py
