[metadata]
name = django_qserializer
version = 0.2.9
url = https://github.com/buserbrasil/django-qserializer
license = MIT
author = Iuri de Silvio
author_email = iurisilvio@gmail.com
description = Django queryset and serialization together
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
DJANGO_SETTINGS_MODULE=django_qserializer.tests.testapp.settings
addopts = --nomigrations --cov=django_qserializer --cov-report html --cov-report term --flake8
python_files = tests.py test_*.py *_tests.py

[flake8]
max-line-length = 100

[aliases]
test=pytest
